--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve -o --poll=2000",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "prettier": "npx prettier --write src/**/*.ts|html"
+    "prettier": "npx prettier --write src/**/*.ts"
   },
   "husky": {
     "hooks": {
@@ -16,15 +16,21 @@
     }
   },
   "lint-staged": {
-    "*.(ts|html)": ["npm run prettier", "npm run lint", "git add"]
+    "*.(ts|html)": [
+      "npm run prettier",
+      "npm run lint",
+      "git add"
+    ]
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.5",
+    "@angular/cdk": "^11.0.3",
     "@angular/common": "~11.0.5",
     "@angular/compiler": "~11.0.5",
     "@angular/core": "~11.0.5",
     "@angular/forms": "~11.0.5",
+    "@angular/material": "^11.0.3",
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
