--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "eslint.validate": [ "javascript", "typescript", "html"],
+    "eslint.options": {
+        "extensions": [".js", ".ts", "html"]
+    },
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": true,
+    }
 }
